feat: implement user activation account
